bynkc/tests/fixtures/positive/166_is_refined_narrow_and/src/demo.karn
commons demo

type Code = String where MinLength(3)

fn firstChar(c: Code) -> Bool {
  true
}

fn check(s: String) -> Bool {
  s is Code && firstChar(s)
}
