bynkc/tests/fixtures/negative/46_opaque_unsafe_outside/src/user/main.karn
commons user

uses lib

fn make(s: String) -> Token {
  Token.unsafe(s)
}
